# launcher

./: CLAUDE.md  CMakeLists.txt
qml/: GridItemDelegate.qml  main.qml
src/: launcher.cpp  launchermodel.cpp  main.cpp
